# albert

./: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
transcription_albert/: .gitignore  Cargo.toml  README.md
transcription_albert/src/: lib.rs
