[package]
name = "albertine"
version = "0.5.3"
description = "A Tauri App"
authors = ["Jérome Bousquié"]
license = ""
repository = "https://github.com/jbousquie/albert"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.4.1", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-dialog = "2.2.2"
directories = "6.0"
tokio = { version = "1.45.0", features = ["full"] }
mp3_splitter = { git = "https://github.com/jbousquie/mp3_splitter.git" }
wav_splitter = { git = "https://github.com/jbousquie/wav_splitter.git" }
transcription_albert = { git = "https://github.com/jbousquie/transcription_albert.git" }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"

[patch."https://github.com/jbousquie/transcription_albert.git"]
transcription_albert = { path = "../transcription_albert" }
