[package]
name = "transcription_albert"
version = "0.2.1"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "transcription"
path = "src/bin/transcription.rs"

[[bin]]
name = "format_transcription"
path = "src/bin/format_transcription.rs"

[[bin]]
name = "chiffrement"
path = "src/bin/chiffrement.rs"


[dependencies]
reqwest = { version = "0.12.15", features = ["blocking", "json", "multipart"] }
base64 = "0.22.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
